[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/ui/bonus/enemy_button_call_under.png" type="Texture2D" id=1]
[ext_resource path="res://assets/sprites/ui/bonus/enemy_button_call_over.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/enemy-call-button/enemy-call-button.gd" type="Script" id=3]
[ext_resource path="res://resources/theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://resources/fonts/boogaloo-40px.tres" type="FontFile" id=5]
[ext_resource path="res://assets/sprites/ui/bonus/enemy_button_call_select.png" type="Texture2D" id=6]
[ext_resource path="res://assets/sprites/ui/bonus/enemy__button_call_direction.png" type="Texture2D" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 31.6885

[sub_resource type="Animation" id=2]
resource_name = "Scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="EnemyCallButton" type="Area2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visible" type="Node2D" parent="."]

[node name="TextureSelect" type="TextureRect" parent="Visible"]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureDirection" type="TextureRect" parent="Visible"]
offset_left = -31.0
offset_top = -31.0
offset_right = 33.0
offset_bottom = 33.0
scale = Vector2( 1, 1.6 )
pivot_offset = Vector2( 31, 31 )
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="Visible"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2( 32, 32 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Scale"
anims/Scale = SubResource( 2 )

[node name="PopupInfo" type="PopupPanel" parent="."]
offset_left = 38.7059
offset_top = 57.5432
offset_right = 414.706
offset_bottom = 253.543
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupInfo"]
offset_left = 33.0
offset_top = 33.0
offset_right = 343.0
offset_bottom = 163.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupInfo/MarginContainer"]
offset_right = 310.0
offset_bottom = 130.0
mouse_filter = 2

[node name="Label" type="Label" parent="PopupInfo/MarginContainer/VBoxContainer"]
offset_right = 310.0
offset_bottom = 56.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.886275, 1, 0.27451, 1 )
text = "Incoming Wave"
align = 1

[node name="WaveInfo" type="Label" parent="PopupInfo/MarginContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 310.0
offset_bottom = 93.0
text = "Goblin x3"
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="PopupInfo/MarginContainer/VBoxContainer"]
offset_top = 97.0
offset_right = 310.0
offset_bottom = 130.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
text = "Tap again to call it early"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_EnemyCallButton_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_EnemyCallButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EnemyCallButton_mouse_exited"]
